Fix z-index for context menu

--- a/src/client/styles/_note-sidebar.scss
+++ b/src/client/styles/_note-sidebar.scss
@@ -121,7 +121,7 @@
         font-size: 1rem;
         color: transparent;
         padding: 0.5rem;
-        z-index: 99;
+        z-index: 1;
         cursor: pointer;
 
         &.active {
